--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 dj-database-url==1.2.0
 Django==4.1.7
+django-cogwheels==0.3
 django-filter==22.1
 django-modelcluster==6.0
 django-permissionedforms==0.1
@@ -28,5 +29,6 @@ sqlparse==0.4.3
 telepath==0.3
 urllib3==1.26.14
 wagtail==4.2
+wagtailmenus==3.1.5
 webencodings==0.5.1
 Willow==1.4.1
